brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_heredoc_dash_in_command_substitution.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "RESULT=$(\n\tcat <<-EOF\n\t\thello world\n\tEOF\n)",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("RESULT"),
                    value: Scalar(Word(
                      value: "$(\n\tcat <<-EOF\nhello world\nEOF\n)",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "RESULT=$(\n\tcat <<-EOF\nhello world\nEOF\n)",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
