brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_heredoc_dash_in_function.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "myfunc() {\n\tcat <<- EOF\n\t\thello\n\tEOF\n}\necho done\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "myfunc",
                  loc: "[location]",
                ),
                body: FunctionBody(BraceGroup(BraceGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "cat",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              IoRedirect(HereDocument(None, IoHereDocument(
                                remove_tabs: true,
                                requires_expansion: true,
                                here_end: Word(
                                  value: "EOF",
                                  loc: "[location]",
                                ),
                                doc: Word(
                                  value: "hello\n",
                                  loc: "[location]",
                                ),
                              ))),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                )), None),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "done",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
