brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_heredoc_then_command.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat <<EOF\nhello\nEOF\necho done\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cat",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  IoRedirect(HereDocument(None, IoHereDocument(
                    requires_expansion: true,
                    here_end: Word(
                      value: "EOF",
                      loc: "[location]",
                    ),
                    doc: Word(
                      value: "hello\n",
                      loc: "[location]",
                    ),
                  ))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "done",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
