brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_if_else_ext_test.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "if [[ ${BASH_VERSINFO[0]} -ge 5 ]]; then\n\t[[ ${FOO@a} == *a* ]]\nelse\n\t[[ $(declare -p FOO) == \"declare -a\"* ]]\nfi\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(IfClause(IfClauseCommand(
                condition: CompoundList([
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Compound(ExtendedTest(ExtendedTestExprCommand(
                          expr: BinaryTest(ArithmeticGreaterThanOrEqualTo, Word(
                            value: "${BASH_VERSINFO[0]}",
                            loc: "[location]",
                          ), Word(
                            value: "5",
                            loc: "[location]",
                          )),
                          loc: "[location]",
                        )), None),
                      ],
                    ),
                  ), Sequence),
                ]),
                then: CompoundList([
                  CompoundListItem(AndOrList(
                    first: Pipeline(
                      seq: [
                        Compound(ExtendedTest(ExtendedTestExprCommand(
                          expr: BinaryTest(StringExactlyMatchesPattern, Word(
                            value: "${FOO@a}",
                            loc: "[location]",
                          ), Word(
                            value: "*a*",
                            loc: "[location]",
                          )),
                          loc: "[location]",
                        )), None),
                      ],
                    ),
                  ), Sequence),
                ]),
                elses: Some([
                  ElseClause(
                    body: CompoundList([
                      CompoundListItem(AndOrList(
                        first: Pipeline(
                          seq: [
                            Compound(ExtendedTest(ExtendedTestExprCommand(
                              expr: BinaryTest(StringExactlyMatchesPattern, Word(
                                value: "$(declare -p FOO)",
                                loc: "[location]",
                              ), Word(
                                value: "\"declare -a\"*",
                                loc: "[location]",
                              )),
                              loc: "[location]",
                            )), None),
                          ],
                        ),
                      ), Sequence),
                    ]),
                  ),
                ]),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
