brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_param_transform_in_function.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "myfunc() {\n\tif [[ ${PYTHON_COMPAT@a} == *a* ]]; then\n\t\techo yes\n\tfi\n}\n",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "myfunc",
                  loc: "[location]",
                ),
                body: FunctionBody(BraceGroup(BraceGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Compound(IfClause(IfClauseCommand(
                            condition: CompoundList([
                              CompoundListItem(AndOrList(
                                first: Pipeline(
                                  seq: [
                                    Compound(ExtendedTest(ExtendedTestExprCommand(
                                      expr: BinaryTest(StringExactlyMatchesPattern, Word(
                                        value: "${PYTHON_COMPAT@a}",
                                        loc: "[location]",
                                      ), Word(
                                        value: "*a*",
                                        loc: "[location]",
                                      )),
                                      loc: "[location]",
                                    )), None),
                                  ],
                                ),
                              ), Sequence),
                            ]),
                            then: CompoundList([
                              CompoundListItem(AndOrList(
                                first: Pipeline(
                                  seq: [
                                    Simple(SimpleCommand(
                                      word_or_name: Some(Word(
                                        value: "echo",
                                        loc: "[location]",
                                      )),
                                      suffix: Some(CommandSuffix([
                                        Word(Word(
                                          value: "yes",
                                          loc: "[location]",
                                        )),
                                      ])),
                                    )),
                                  ],
                                ),
                              ), Sequence),
                            ]),
                            loc: "[location]",
                          )), None),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                )), None),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
