brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__complex__parse_parameter_transformation.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "[[ ${PYTHON_COMPAT@a} == *a* ]]",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ExtendedTest(ExtendedTestExprCommand(
                expr: BinaryTest(StringExactlyMatchesPattern, Word(
                  value: "${PYTHON_COMPAT@a}",
                  loc: "[location]",
                ), Word(
                  value: "*a*",
                  loc: "[location]",
                )),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
